# Obtuse_triangle_reduction_project1

./: CCDT.h  CCDT_implementation.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ex  jsontest.cpp  jsontest2.cpp  main.cpp  main2.cpp  maincentroid.cpp  mainpolycenter.cpp  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp  test  test.cpp  testpolygon.cpp  working.cpp  workingcopy2.cpp
CGAL_Qt5_moc_and_resources_autogen/: deps
CGAL_Qt5_moc_and_resources_autogen/34EZIPZFLO/: moc_DemosMainWindow.cpp  moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp  moc_qglviewer.cpp.d
include/: CCDT.h
src/: lib.cpp  triangulation.cpp
